# try-tflm

./: CMakeLists.txt  Readme.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  esp_main.h  idf_component.yml  img.c  labels.h  main.cpp  main_functions.cpp  main_functions.h  mobilenet_v1_0.25_128.tflite  model_convert.py  model_settings.h  model_tflite.h
main/sample_images/: img2c.py
